TreeMap based access is implemented